feat: first client stub

--- a/qwiki/src/client/index.html
+++ b/qwiki/src/client/index.html
@@ -1,9 +1,18 @@
 <html lang="en">
 <head>
     <title>Qwiki</title>
+    <script type="importmap">
+        {
+          "imports": {
+            "@qlient/": "/js/"
+          }
+        }
+    </script>
 </head>
 <body>
+<div id="main">
     Content
+</div>
 </body>
-<script  type="module" src="./loader.js"></script>
+<script type="module" src="./loader.js"></script>
 </html>
