--- a/qwiki/src/client/index.html
+++ b/qwiki/src/client/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Qwiki</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
     <script type="importmap">
         {
           "imports": {
