fix: generalize read

--- a/qwiki/src/static/index.html
+++ b/qwiki/src/static/index.html
@@ -10,10 +10,7 @@
         }
     </script>
 </head>
-<body>
-<div id="main">
-    Content
-</div>
+<body id="main-container">
 </body>
 <script type="module" src="./loader.js"></script>
 </html>
