update client resolving paths

--- a/qclient/src/index.html
+++ b/qclient/src/index.html
@@ -5,12 +5,12 @@
     <script type="importmap">
         {
           "imports": {
-            "@qlient/": "/js/"
+            "@qlient/": "/"
           }
         }
     </script>
 </head>
 <body id="main-container">
 </body>
-<script type="module" src="./loader.js"></script>
+<script type="module" src="./app.js"></script>
 </html>
