--- a/qclient/src/index.html
+++ b/qclient/src/index.html
@@ -1,16 +1,12 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Qwiki</title>
-    <link rel="icon" type="image/png" href="favicon.png"/>
-    <script type="importmap">
-        {
-          "imports": {
-            "@qlient/": "/"
-          }
-        }
-    </script>
+    <meta charset="utf-8" />
+    <title>Getting Started</title>
+
 </head>
-<body id="main-container">
+<body>
+
+<script src="main.js"></script>
 </body>
-<script type="module" src="./app.js"></script>
 </html>
