--- a/qclient/src/index.html
+++ b/qclient/src/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Getting Started</title>
-
+    <title>Qwiki</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
+    <script type="importmap">
+        {
+          "imports": {
+            "@qlient/": "/",
+            "handlebars": "/libs/handlebars/dist/handlebars.js"
+          }
+        }
+    </script>
 </head>
-<body>
-
-<script src="main.js"></script>
+<body id="main-container">
 </body>
+<script src="./main.js"></script>
 </html>
