refactor: simplify code

--- a/test/parsing/asset/template1.html
+++ b/test/parsing/asset/template1.html
@@ -3,6 +3,10 @@
 
 </header>
 <body>
-{{ $foo }}
+{{ $foo }}<br/>
+{{ 1234 }}<br/>
+{{ "string" }}<br/>
+{{ True }}<br/>
+{{ False }}<br/>
 </body>
 </html>
