--- a/test/parsing/asset/template1.html
+++ b/test/parsing/asset/template1.html
@@ -3,10 +3,24 @@
 
 </header>
 <body>
-{{ $foo }}<br/>
-{{ 1234 }}<br/>
-{{ "string" }}<br/>
-{{ True }}<br/>
-{{ False }}<br/>
+<h1>Constants</h1>
+<ul>
+    <li>{{ 1234 }}</li>
+    <li>{{ "string" }}</li>
+    <li>{{ True }}</li>
+    <li>{{ False }}</li>
+</ul>
+<h1>Variables</h1>
+<ul>
+    <li>{{ $foo }}</li>
+</ul>
+<h1>If</h1>
+<p>
+    cond1 is {{ if ( $cond1 ) }}OK{{ else }}NOT OK{{ end }}
+</p>
+<h1>Else</h1>
+<p>
+    cond2 is {{ if ( $cond2 ) }}OK{{ else }}NOT OK{{ end }}
+</p>
 </body>
 </html>
