fix(renderer): inline if statement

--- a/test/parsing/asset/template1.html
+++ b/test/parsing/asset/template1.html
@@ -22,5 +22,9 @@
 <p>
     cond2 is {{ if ( $cond2 ) }}OK{{ else }}NOT OK{{ end }}
 </p>
+<h1>Inline If</h1>
+<p>
+    cond1 is {{ if ( $cond1 ); "OK"; else; "NOT OK"; end }}
+</p>
 </body>
 </html>
